/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/8.1/userguide/building_java_projects.html
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'eclipse'
    id 'org.beryx.jlink' version '2.25.0'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
	testImplementation 'org.assertj:assertj-core:3.24.2'
    implementation 'com.google.guava:guava:32.1.1-jre'
	implementation 'org.hibernate.orm:hibernate-core:6.2.7.Final'
	implementation 'org.postgresql:postgresql:42.6.0'
}

javafx {
    version = "20.0.2"
    modules = [ 'javafx.controls', 'javafx.fxml']
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(19)
    }
}

//applicationDefaultJvmArgs = ["--module-path /Users/Chris/Eigene\ Docs/IT/Java/Workspace/dgdlz/libs/javafx-sdk-20.0.2/lib --add-modules javafx.controls,javafx.fxml"]

application {
    // Define the main class for the application.
    mainClass = 'dgdlz.TextadventureApp'
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}

